--- a/ejerciciosconplantillas/index.html
+++ b/ejerciciosconplantillas/index.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('images/istockphoto-802893644-612x612.jpg');
+  background-image: url('images/miami.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
