--- a/ejerciciosconplantillas/index01.html
+++ b/ejerciciosconplantillas/index01.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('imagenes/miami.jpg');
+  background-image: url('imagenes/miami-4k.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
