--- a/ejerciciosconplantillas/index.html
+++ b/ejerciciosconplantillas/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,7 +11,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('images/miami-4k.jpg');
+  background-image: url('miami-4k.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -24,9 +25,9 @@ body, html {height: 100%}
     Logo
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">Miami</h1>
+    <h1 class="w3-jumbo w3-animate-top">MIAMI CITY</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">35 days left</p>
+    <p class="w3-large w3-center">The modern city</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
