--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Descubre Miami</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f0f8ff;
+      color: #333;
+    }
+    header {
+      background-color: #008cba;
+      color: white;
+      padding: 1em 2em;
+      text-align: center;
+    }
+    section {
+      padding: 2em;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 1em auto;
+      border-radius: 10px;
+    }
+    footer {
+      text-align: center;
+      padding: 1em;
+      background-color: #ddd;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Bienvenido a Miami</h1>
+    <p>Una ciudad vibrante, multicultural y soleada</p>
+  </header>
 
+  <section>
+    <h2>Playas Increíbles</h2>
+    <p>Miami es conocida por sus playas de arena blanca y aguas cristalinas. South Beach es la más famosa.</p>
+    <!-- Sustituye 'playa.jpg' por tu propia imagen -->
+    <img src="images/playa.jpg" alt="Foto de una playa de Miami">
+  </section>
+
+  <section>
+    <h2>Arte y Cultura</h2>
+    <p>El barrio de Wynwood es famoso por sus murales de arte urbano y galerías creativas.</p>
+    <!-- Sustituye 'arte.jpg' por tu propia imagen -->
+    <img src="images/arte.jpg" alt="Mural de arte en Wynwood">
+  </section>
+
+  <section>
+    <h2>Vida Nocturna</h2>
+    <p>La vida nocturna en Miami es vibrante, con clubes famosos, bares frente al mar y música latina en todas partes.</p>
+    <!-- Sustituye 'noche.jpg' por tu propia imagen -->
+    <img src="images/noche.jpg" alt="Club nocturno en Miami">
+  </section>
+
+  <footer>
+    <p>© 2025 Tu Nombre - Página hecha para GitHub Pages</p>
+  </footer>
+</body>
+</html>
