--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <h2>Playas Increíbles</h2>
     <p>Miami es conocida por sus playas de arena blanca y aguas cristalinas. South Beach es la más famosa.</p>
     <!-- Sustituye 'playa.jpg' por tu propia imagen -->
-    <img src="images/playa.jpg" alt="Foto de una playa de Miami">
+    <img src="imagenes/large_Brickell_Pool.jpg" alt="Foto de una playa de Miami">
   </section>
 
   <section>
