--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h2>Arte y Cultura</h2>
     <p>El barrio de Wynwood es famoso por sus murales de arte urbano y galerías creativas.</p>
     <!-- Sustituye 'arte.jpg' por tu propia imagen -->
-    <img src="images/arte.jpg" alt="Mural de arte en Wynwood">
+    <img src="imagenes/1695239229092.jpg" alt="Mural de arte en Wynwood">
   </section>
 
   <section>
