--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Tu Nombre - Página hecha para GitHub Pages</p>
+    <p>© 2025 Raúl Galindo Bernal </p>
   </footer>
 </body>
 </html>
