--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <h2>Playas Increíbles</h2>
     <p>Miami es conocida por sus playas de arena blanca y aguas cristalinas. South Beach es la más famosa.</p>
     <!-- Sustituye 'playa.jpg' por tu propia imagen -->
-    <img src="imagenes/large_Brickell_Pool.jpg" alt="Foto de una playa de Miami">
+    <img src="imagenes/large_Brickell_Pool.jpg">
   </section>
 
   <section>
     <h2>Arte y Cultura</h2>
     <p>El barrio de Wynwood es famoso por sus murales de arte urbano y galerías creativas.</p>
     <!-- Sustituye 'arte.jpg' por tu propia imagen -->
-    <img src="imagenes/1695239229092.jpg" alt="Mural de arte en Wynwood">
+    <img src="imagenes/1695239229092.jpg">
   </section>
 
   <section>
