--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: #333;
     }
     header {
-      background-color: #008cba;
+      background-color: #ffcbdb;
       color: white;
       padding: 1em 2em;
       text-align: center;
