--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f0f8ff;
+      background-color: #DDDDDD;
       color: #333;
     }
     header {
