--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #DDDDDD;
+      background-color: #f0f8ff;
       color: #333;
     }
     header {
-      background-color: #ffcbdb;
+      background-color: #DDDDDD;
       color: white;
       padding: 1em 2em;
       text-align: center;
