--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
     header {
       background-color: #DDDDDD;
-      color: white;
+      color: black;
       padding: 1em 2em;
       text-align: center;
     }
