--- a/index.html
+++ b/index.html
@@ -4,77 +4,126 @@
   <meta charset="UTF-8">
   <title>Descubre Miami</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f0f8ff;
+      color: #333;
+    }
+
+    header {
+      background-color: #DDDDDD;
+      color: black;
+      padding: 1em 2em;
+      text-align: center;
+    }
+
+    .contenedor {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2em;
+      padding: 2em;
+    }
+
+    .item {
+      width: 300px;
+      text-align: center;
+    }
+
+    .item img {
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: transform 0.3s;
+    }
+
+    .item img:hover {
+      transform: scale(1.05);
+    }
+
     .seccion {
       display: none;
+      padding: 2em;
     }
+
     .visible {
       display: block;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1em;
+      background-color: #ddd;
+    }
+
+    .volver {
+      margin-top: 2em;
+      padding: 0.5em 1.5em;
+      background-color: #ccc;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    .volver:hover {
+      background-color: #bbb;
     }
   </style>
 </head>
 <body>
 
-<!-- Header -->
-<header class="w3-container w3-teal w3-center">
-  <h1>Descubre Miami</h1>
-  <p>Haz clic en una imagen para ver más información</p>
+<header>
+  <h1>Bienvenido a Miami</h1>
+  <p>Una ciudad vibrante, multicultural y soleada</p>
 </header>
 
 <!-- Página principal -->
-<div id="inicio" class="w3-row-padding w3-padding-16 w3-container visible">
-
-  <div class="w3-third">
-    <a href="#" onclick="mostrarSeccion('playa')">
-      <img src="imagenes/playa.jpg" alt="Playa" style="width:100%">
+<div id="inicio" class="visible">
+  <div class="contenedor">
+    <div class="item">
+      <img src="imagenes/large_Brickell_Pool.jpg" onclick="mostrarSeccion('playa')" alt="Playas Increíbles">
       <h3>Playas Increíbles</h3>
-    </a>
-  </div>
-
-  <div class="w3-third">
-    <a href="#" onclick="mostrarSeccion('arte')">
-      <img src="imagenes/arte.jpg" alt="Arte" style="width:100%">
+    </div>
+    <div class="item">
+      <img src="imagenes/Wynwood-5.jpg" onclick="mostrarSeccion('arte')" alt="Arte y Cultura">
       <h3>Arte y Cultura</h3>
-    </a>
-  </div>
-
-  <div class="w3-third">
-    <a href="#" onclick="mostrarSeccion('noche')">
-      <img src="imagenes/noche.jpg" alt="Noche" style="width:100%">
+    </div>
+    <div class="item">
+      <img src="images/noche.jpg" onclick="mostrarSeccion('noche')" alt="Vida Nocturna">
       <h3>Vida Nocturna</h3>
-    </a>
+    </div>
   </div>
-
 </div>
 
 <!-- Sección Playa -->
-<div id="playa" class="w3-container seccion">
+<div id="playa" class="seccion">
   <h2>Playas Increíbles</h2>
-  <p>Aquí pones tú la información sobre las playas de Miami.</p>
-  <button class="w3-button w3-teal" onclick="volverInicio()">Volver al inicio</button>
+  <p>[Aquí escribes tú la información sobre las playas]</p>
+  <button class="volver" onclick="volverInicio()">Volver al inicio</button>
 </div>
 
 <!-- Sección Arte -->
-<div id="arte" class="w3-container seccion">
+<div id="arte" class="seccion">
   <h2>Arte y Cultura</h2>
-  <p>Aquí pones tú la información sobre el arte en Miami.</p>
-  <button class="w3-button w3-teal" onclick="volverInicio()">Volver al inicio</button>
+  <p>[Aquí escribes tú la información sobre el arte en Miami]</p>
+  <button class="volver" onclick="volverInicio()">Volver al inicio</button>
 </div>
 
 <!-- Sección Noche -->
-<div id="noche" class="w3-container seccion">
+<div id="noche" class="seccion">
   <h2>Vida Nocturna</h2>
-  <p>Aquí pones tú la información sobre la vida nocturna de Miami.</p>
-  <button class="w3-button w3-teal" onclick="volverInicio()">Volver al inicio</button>
+  <p>[Aquí escribes tú la información sobre la vida nocturna]</p>
+  <button class="volver" onclick="volverInicio()">Volver al inicio</button>
 </div>
 
-<!-- Footer -->
-<footer class="w3-container w3-teal w3-center">
+<footer>
   <p>© 2025 Raúl Galindo Bernal</p>
 </footer>
 
-<!-- JavaScript para mostrar secciones -->
 <script>
   function mostrarSeccion(id) {
     document.getElementById("inicio").classList.remove("visible");
