--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h3>Arte y Cultura</h3>
     </div>
     <div class="item">
-      <img src="images/noche.jpg" onclick="mostrarSeccion('noche')" alt="Vida Nocturna">
+      <img src="imagenes/99.jpg" onclick="mostrarSeccion('noche')" alt="Vida Nocturna">
       <h3>Vida Nocturna</h3>
     </div>
   </div>
