--- a/index.html
+++ b/index.html
@@ -102,21 +102,45 @@
 <!-- Sección Playa -->
 <div id="playa" class="seccion">
   <h2>Playas Increíbles</h2>
-  <p>[Aquí escribes tú la información sobre las playas]</p>
+  <p>South Beach: La más famosa, con arena blanca, ambiente animado, bares y clubs.
+
+North Beach: Más tranquila, ideal para relajarse y familias.
+
+Haulover Beach: Tiene zona nudista y es buena para kiteboarding.
+
+Sunny Isles Beach: Playa familiar con aguas calmadas.
+
+Bill Baggs Cape Florida (Key Biscayne): Naturaleza, faro histórico y actividades al aire libre.</p>
   <button class="volver" onclick="volverInicio()">Volver al inicio</button>
 </div>
 
 <!-- Sección Arte -->
 <div id="arte" class="seccion">
   <h2>Arte y Cultura</h2>
-  <p>[Aquí escribes tú la información sobre el arte en Miami]</p>
+  <p>Wynwood Walls: Museo al aire libre con impresionantes murales de arte urbano y grafiti.
+
+Distrito Art Deco (Miami Beach): Arquitectura única de los años 20-30, con colores pastel y formas geométricas.
+
+Museo Pérez de Arte Contemporáneo (Pérez Art Museum Miami - PAMM): Exhibe arte moderno y contemporáneo internacional.
+
+Calle Ocho (Little Havana): Centro cultural cubano con música, arte, comida tradicional y festivales.
+
+Miami Design District: Zona de tiendas de diseño, galerías de arte y esculturas públicas.</p>
   <button class="volver" onclick="volverInicio()">Volver al inicio</button>
 </div>
 
 <!-- Sección Noche -->
 <div id="noche" class="seccion">
   <h2>Vida Nocturna</h2>
-  <p>[Aquí escribes tú la información sobre la vida nocturna]</p>
+  <p>South Beach: El epicentro de la vida nocturna con bares, discotecas y clubes famosos como LIV, Mango’s y Story.
+
+Calle Ocho (Little Havana): Fiestas con música latina, salsa y ambiente auténtico cubano.
+
+Eventos y festivales: Miami acoge eventos como el Ultra Music Festival (electrónica), Art Basel (arte y fiestas VIP) y Miami Music Week.
+
+Bares en rooftops: Muchos hoteles tienen terrazas con vistas y ambiente para tomar copas al atardecer.
+
+Ambiente diverso: Desde fiestas electrónicas, salsa, reguetón, hasta lounge y bares tranquilos.</p>
   <button class="volver" onclick="volverInicio()">Volver al inicio</button>
 </div>
 
