--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 <!-- Sección Playa -->
 <div id="playa" class="seccion">
   <h2>Playas Increíbles</h2>
-  <p>South Beach: La más famosa, con arena blanca, ambiente animado, bares y clubs.
+  <p>
+South Beach: La más famosa, con arena blanca, ambiente animado, bares y clubs.
 
 North Beach: Más tranquila, ideal para relajarse y familias.
 
@@ -111,13 +112,15 @@ Haulover Beach: Tiene zona nudista y es buena para kiteboarding.
 Sunny Isles Beach: Playa familiar con aguas calmadas.
 
 Bill Baggs Cape Florida (Key Biscayne): Naturaleza, faro histórico y actividades al aire libre.</p>
+
   <button class="volver" onclick="volverInicio()">Volver al inicio</button>
 </div>
 
 <!-- Sección Arte -->
 <div id="arte" class="seccion">
   <h2>Arte y Cultura</h2>
-  <p>Wynwood Walls: Museo al aire libre con impresionantes murales de arte urbano y grafiti.
+  <p>
+Wynwood Walls: Museo al aire libre con impresionantes murales de arte urbano y grafiti.
 
 Distrito Art Deco (Miami Beach): Arquitectura única de los años 20-30, con colores pastel y formas geométricas.
 
@@ -132,7 +135,8 @@ Miami Design District: Zona de tiendas de diseño, galerías de arte y escultura
 <!-- Sección Noche -->
 <div id="noche" class="seccion">
   <h2>Vida Nocturna</h2>
-  <p>South Beach: El epicentro de la vida nocturna con bares, discotecas y clubes famosos como LIV, Mango’s y Story.
+  <p>
+South Beach: El epicentro de la vida nocturna con bares, discotecas y clubes famosos como LIV, Mango’s y Story.
 
 Calle Ocho (Little Havana): Fiestas con música latina, salsa y ambiente auténtico cubano.
 
