--- a/index.html
+++ b/index.html
@@ -102,16 +102,12 @@
 <!-- Sección Playa -->
 <div id="playa" class="seccion">
   <h2>Playas Increíbles</h2>
-  <p>
-South Beach: La más famosa, con arena blanca, ambiente animado, bares y clubs.
+ <p><strong>South Beach:</strong> La más famosa, con arena blanca, ambiente animado, bares y clubs.</p>
+<p><strong>North Beach:</strong> Más tranquila, ideal para relajarse y familias.</p>
+<p><strong>Haulover Beach:</strong> Tiene zona nudista y es buena para kiteboarding.</p>
+<p><strong>Sunny Isles Beach:</strong> Playa familiar con aguas calmadas.</p>
+<p><strong>Bill Baggs Cape Florida (Key Biscayne):</strong> Naturaleza, faro histórico y actividades al aire libre.</p>
 
-North Beach: Más tranquila, ideal para relajarse y familias.
-
-Haulover Beach: Tiene zona nudista y es buena para kiteboarding.
-
-Sunny Isles Beach: Playa familiar con aguas calmadas.
-
-Bill Baggs Cape Florida (Key Biscayne): Naturaleza, faro histórico y actividades al aire libre.</p>
 
   <button class="volver" onclick="volverInicio()">Volver al inicio</button>
 </div>
