--- a/index.html
+++ b/index.html
@@ -116,15 +116,12 @@
 <div id="arte" class="seccion">
   <h2>Arte y Cultura</h2>
   <p>
-Wynwood Walls: Museo al aire libre con impresionantes murales de arte urbano y grafiti.
+<p><strong>Wynwood Walls:</strong> Museo al aire libre con impresionantes murales de arte urbano y grafiti.</p>
+<p><strong>Distrito Art Deco (Miami Beach):</strong> Arquitectura única de los años 20-30, con colores pastel y formas geométricas.</p>
+<p><strong>Museo Pérez de Arte Contemporáneo (Pérez Art Museum Miami - PAMM):</strong> Exhibe arte moderno y contemporáneo internacional.</p>
+<p><strong>Calle Ocho (Little Havana):</strong> Centro cultural cubano con música, arte, comida tradicional y festivales.</p>
+<p><strong>Miami Design District:</strong> Zona de tiendas de diseño, galerías de arte y esculturas públicas.</p>
 
-Distrito Art Deco (Miami Beach): Arquitectura única de los años 20-30, con colores pastel y formas geométricas.
-
-Museo Pérez de Arte Contemporáneo (Pérez Art Museum Miami - PAMM): Exhibe arte moderno y contemporáneo internacional.
-
-Calle Ocho (Little Havana): Centro cultural cubano con música, arte, comida tradicional y festivales.
-
-Miami Design District: Zona de tiendas de diseño, galerías de arte y esculturas públicas.</p>
   <button class="volver" onclick="volverInicio()">Volver al inicio</button>
 </div>
 
@@ -132,15 +129,12 @@ Miami Design District: Zona de tiendas de diseño, galerías de arte y escultura
 <div id="noche" class="seccion">
   <h2>Vida Nocturna</h2>
   <p>
-South Beach: El epicentro de la vida nocturna con bares, discotecas y clubes famosos como LIV, Mango’s y Story.
+<p><strong>South Beach:</strong> El epicentro de la vida nocturna con bares, discotecas y clubes famosos como LIV, Mango’s y Story.</p>
+<p><strong>Calle Ocho (Little Havana):</strong> Fiestas con música latina, salsa y ambiente auténtico cubano.</p>
+<p><strong>Eventos y festivales:</strong> Miami acoge eventos como el Ultra Music Festival (electrónica), Art Basel (arte y fiestas VIP) y Miami Music Week.</p>
+<p><strong>Bares en rooftops:</strong> Muchos hoteles tienen terrazas con vistas y ambiente para tomar copas al atardecer.</p>
+<p><strong>Ambiente diverso:</strong> Desde fiestas electrónicas, salsa, reguetón, hasta lounge y bares tranquilos.</p>
 
-Calle Ocho (Little Havana): Fiestas con música latina, salsa y ambiente auténtico cubano.
-
-Eventos y festivales: Miami acoge eventos como el Ultra Music Festival (electrónica), Art Basel (arte y fiestas VIP) y Miami Music Week.
-
-Bares en rooftops: Muchos hoteles tienen terrazas con vistas y ambiente para tomar copas al atardecer.
-
-Ambiente diverso: Desde fiestas electrónicas, salsa, reguetón, hasta lounge y bares tranquilos.</p>
   <button class="volver" onclick="volverInicio()">Volver al inicio</button>
 </div>
 
