--- a/index.html
+++ b/index.html
@@ -7,91 +7,79 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
   <style>
-    body, h1, h2, h3, p {font-family: "Raleway", sans-serif}
-    .seccion {display: none; padding: 2em;}
-    .visible {display: block;}
-    .item img {cursor: pointer; transition: transform 0.3s; border-radius: 10px;}
-    .item img:hover {transform: scale(1.05);}
-    .volver {margin-top: 2em; padding: 0.5em 1.5em; background-color: #ccc; border: none; border-radius: 8px; cursor: pointer;}
-    .volver:hover {background-color: #bbb;}
+    body,h1,h2,h3,p {font-family: "Raleway", sans-serif}
+    .bgimg {
+      background-image: url('https://www.w3schools.com/w3images/miami.jpg');
+      min-height: 100%;
+      background-position: center;
+      background-size: cover;
+    }
+    .seccion {
+      display: none;
+      padding: 4em;
+      background-color: rgba(255, 255, 255, 0.95);
+      color: #000;
+    }
+    .visible {
+      display: block;
+    }
+    .item img {
+      cursor: pointer;
+      transition: transform 0.3s;
+      border-radius: 10px;
+    }
+    .item img:hover {
+      transform: scale(1.05);
+    }
+    .volver {
+      margin-top: 2em;
+    }
   </style>
 </head>
 <body>
 
-<!-- Encabezado -->
-<header class="w3-container w3-center w3-padding-32 w3-light-grey">
-  <h1>Bienvenido a Miami</h1>
-  <p>Una ciudad vibrante, multicultural y soleada</p>
-</header>
-
-<!-- Página principal -->
-<div id="inicio" class="visible w3-container">
-  <div class="w3-row-padding w3-center">
-    <div class="w3-third item">
-      <img src="imagenes/istockphoto-680317604-612x612.jpg" style="width:100%" onclick="mostrarSeccion('playa')" alt="Playas Increíbles">
-      <h3>Playas Increíbles</h3>
-    </div>
-    <div class="w3-third item">
-      <img src="imagenes/Wynwood-5.jpg" style="width:100%" onclick="mostrarSeccion('arte')" alt="Arte y Cultura">
-      <h3>Arte y Cultura</h3>
-    </div>
-    <div class="w3-third item">
-      <img src="imagenes/99.jpg" style="width:100%" onclick="mostrarSeccion('noche')" alt="Vida Nocturna">
-      <h3>Vida Nocturna</h3>
-    </div>
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+    Descubre Miami
   </div>
-</div>
+  <div class="w3-display-middle">
+    <div id="inicio" class="visible w3-center">
+      <h1 class="w3-jumbo w3-animate-top">Bienvenido a Miami</h1>
+      <p class="w3-large">Una ciudad vibrante, multicultural y soleada</p>
+      <div class="w3-row-padding w3-margin-top">
+        <div class="w3-third item">
+          <img src="imagenes/istockphoto-680317604-612x612.jpg" style="width:100%" onclick="mostrarSeccion('playa')" alt="Playas Increíbles">
+          <h3>Playas Increíbles</h3>
+        </div>
+        <div class="w3-third item">
+          <img src="imagenes/Wynwood-5.jpg" style="width:100%" onclick="mostrarSeccion('arte')" alt="Arte y Cultura">
+          <h3>Arte y Cultura</h3>
+        </div>
+        <div class="w3-third item">
+          <img src="imagenes/99.jpg" style="width:100%" onclick="mostrarSeccion('noche')" alt="Vida Nocturna">
+          <h3>Vida Nocturna</h3>
+        </div>
+      </div>
+    </div>
 
-<!-- Sección Playa -->
-<div id="playa" class="seccion w3-container">
-  <h2>Playas Increíbles</h2>
-  <p><strong>South Beach:</strong> La más famosa, con arena blanca, ambiente animado, bares y clubs.</p>
-  <p><strong>North Beach:</strong> Más tranquila, ideal para relajarse y familias.</p>
-  <p><strong>Haulover Beach:</strong> Tiene zona nudista y es buena para kiteboarding.</p>
-  <p><strong>Sunny Isles Beach:</strong> Playa familiar con aguas calmadas.</p>
-  <p><strong>Bill Baggs Cape Florida (Key Biscayne):</strong> Naturaleza, faro histórico y actividades al aire libre.</p>
-  <button class="volver w3-button w3-light-grey" onclick="volverInicio()">Volver al inicio</button>
-</div>
+    <div id="playa" class="seccion w3-container">
+      <h2>Playas Increíbles</h2>
+      <p><strong>South Beach:</strong> La más famosa, con arena blanca, ambiente animado, bares y clubs.</p>
+      <p><strong>North Beach:</strong> Más tranquila, ideal para relajarse y familias.</p>
+      <p><strong>Haulover Beach:</strong> Tiene zona nudista y es buena para kiteboarding.</p>
+      <p><strong>Sunny Isles Beach:</strong> Playa familiar con aguas calmadas.</p>
+      <p><strong>Bill Baggs Cape Florida (Key Biscayne):</strong> Naturaleza, faro histórico y actividades al aire libre.</p>
+      <button class="w3-button w3-light-grey volver" onclick="volverInicio()">Volver al inicio</button>
+    </div>
 
-<!-- Sección Arte -->
-<div id="arte" class="seccion w3-container">
-  <h2>Arte y Cultura</h2>
-  <p><strong>Wynwood Walls:</strong> Museo al aire libre con impresionantes murales de arte urbano y grafiti.</p>
-  <p><strong>Distrito Art Deco (Miami Beach):</strong> Arquitectura única de los años 20-30, con colores pastel y formas geométricas.</p>
-  <p><strong>Museo Pérez de Arte Contemporáneo (PAMM):</strong> Exhibe arte moderno y contemporáneo internacional.</p>
-  <p><strong>Calle Ocho (Little Havana):</strong> Centro cultural cubano con música, arte, comida tradicional y festivales.</p>
-  <p><strong>Miami Design District:</strong> Zona de tiendas de diseño, galerías de arte y esculturas públicas.</p>
-  <button class="volver w3-button w3-light-grey" onclick="volverInicio()">Volver al inicio</button>
-</div>
+    <div id="arte" class="seccion w3-container">
+      <h2>Arte y Cultura</h2>
+      <p><strong>Wynwood Walls:</strong> Museo al aire libre con impresionantes murales de arte urbano y grafiti.</p>
+      <p><strong>Distrito Art Deco (Miami Beach):</strong> Arquitectura única de los años 20-30, con colores pastel y formas geométricas.</p>
+      <p><strong>Museo Pérez de Arte Contemporáneo (PAMM):</strong> Exhibe arte moderno y contemporáneo internacional.</p>
+      <p><strong>Calle Ocho (Little Havana):</strong> Centro cultural cubano con música, arte, comida tradicional y festivales.</p>
+      <p><strong>Miami Design District:</strong> Zona de tiendas de diseño, galerías de arte y esculturas públicas.</p>
+      <button class="w3-button w3-light-grey volver" onclick="volverInicio()">Volver al inicio</button>
+    </div>
 
-<!-- Sección Noche -->
-<div id="noche" class="seccion w3-container">
-  <h2>Vida Nocturna</h2>
-  <p><strong>South Beach:</strong> El epicentro de la vida nocturna con bares, discotecas y clubes famosos como LIV, Mango’s y Story.</p>
-  <p><strong>Calle Ocho (Little Havana):</strong> Fiestas con música latina, salsa y ambiente auténtico cubano.</p>
-  <p><strong>Eventos y festivales:</strong> Miami acoge eventos como el Ultra Music Festival, Art Basel y Miami Music Week.</p>
-  <p><strong>Bares en rooftops:</strong> Muchos hoteles tienen terrazas con vistas y ambiente para tomar copas al atardecer.</p>
-  <p><strong>Ambiente diverso:</strong> Desde fiestas electrónicas, salsa, reguetón, hasta lounge y bares tranquilos.</p>
-  <button class="volver w3-button w3-light-grey" onclick="volverInicio()">Volver al inicio</button>
-</div>
-
-<!-- Footer -->
-<footer class="w3-center w3-padding-16 w3-light-grey">
-  <p>© 2025 Raúl Galindo Bernal</p>
-</footer>
-
-<script>
-  function mostrarSeccion(id) {
-    document.getElementById("inicio").classList.remove("visible");
-    document.querySelectorAll(".seccion").forEach(sec => sec.classList.remove("visible"));
-    document.getElementById(id).classList.add("visible");
-  }
-
-  function volverInicio() {
-    document.querySelectorAll(".seccion").forEach(sec => sec.classList.remove("visible"));
-    document.getElementById("inicio").classList.add("visible");
-  }
-</script>
-
-</body>
-</html>
+    <div id="noche" class="seccion w3-container">
