--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id="inicio" class="visible w3-center">
       <h1 class="w3-jumbo w3-animate-top">MIAMI CITY</h1>
       <hr class="w3-border-grey" style="margin:auto;width:40%">
-      <p class="w3-large w3-center">The modern city</p>
+      <p class="w3-large w3-center">La ciudad de lujo</p>
       <div class="w3-row-padding w3-margin-top">
         <div class="w3-third item">
           <img src="imagenes/istockphoto-680317604-612x612.jpg" style="width:100%" onclick="mostrarSeccion('playa')" alt="Playas Increíbles">
