--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    <a href="secundaria05.html" target="_blank">secundaria</a>
+    <a href="miami2.html" target="_blank">Fama Miami</a>
   </div>
 
   <div class="w3-display-middle">
