--- a/miami2.html
+++ b/miami2.html
@@ -32,8 +32,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Header -->
   <header class="w3-container w3-center w3-padding-48 w3-white">
-    <h1 class="w3-xxxlarge"><b>JANE BLOGLIFE</b></h1>
-    <h6>Welcome to the blog of <span class="w3-tag">Jane's world</span></h6>
+    <h1 class="w3-xxxlarge"><b>La Fama en Miami</b></h1>
+    <h6>Algunas de las cosas famosas de <span class="w3-tag">Miami</span></h6>
   </header>
 
   <!-- Image header -->
