--- a/miami2.html
+++ b/miami2.html
@@ -39,7 +39,7 @@ body {font-family: "Open Sans"}
           <h5>El ícono del reguetón, <span class="w3-opacity">Junio 2025</span></h5>
         </div>
         <div class="w3-justify">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Bad_Bunny_2022.jpg" alt="Bad Bunny" style="width:100%" class="w3-padding-16">
+          <img src="badbunny miami.jpg" alt="Bad Bunny" style="width:100%" class="w3-padding-16">
           <p><strong>Bad Bunny</strong> visita con frecuencia Miami por sus conciertos, fiestas y colaboraciones. Es una figura clave en el ambiente musical latino en la ciudad.</p>
         </div>
       </div>
@@ -50,7 +50,7 @@ body {font-family: "Open Sans"}
           <h5>Una de las playas más famosas del mundo, <span class="w3-opacity">Todo el año</span></h5>
         </div>
         <div class="w3-justify">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Miami_Beach_sunrise_2020.jpg" alt="Miami Beach" style="width:100%" class="w3-padding-16">
+          <img src="miamibeach.jpg" style="width:100%" class="w3-padding-16">
           <p><strong>Miami Beach</strong> es un ícono turístico, conocido por su vida nocturna, arquitectura art déco y arena blanca. Celebridades y turistas la visitan constantemente.</p>
         </div>
       </div>
@@ -61,7 +61,7 @@ body {font-family: "Open Sans"}
           <h5>Una leyenda del fútbol en Estados Unidos, <span class="w3-opacity">Desde 2023</span></h5>
         </div>
         <div class="w3-justify">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Lionel_Messi_WC2022.jpg" alt="Messi" style="width:100%" class="w3-padding-16">
+          <img src="messi miami.jpg" alt="Messi" style="width:100%" class="w3-padding-16">
           <p><strong>Lionel Messi</strong> revolucionó la MLS al unirse al Inter de Miami. Sus partidos atraen a multitudes y han dado un nuevo impulso al fútbol en la ciudad.</p>
         </div>
       </div>
