--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <p class="w3-large w3-center">La ciudad de lujo</p>
       <div class="w3-row-padding w3-margin-top">
         <div class="w3-third item">
-          <img src="imagenes/istockphoto-680317604-612x612.jpg" style="width:100%" onclick="mostrarSeccion('playa')" alt="Playas Increíbles">
+          <img src="imagenes/miamibeach.jpg" style="width:100%" onclick="mostrarSeccion('playa')" alt="Playas Increíbles">
           <h3>Playas Increíbles</h3>
         </div>
         <div class="w3-third item">
