--- a/miami2.html
+++ b/miami2.html
@@ -69,7 +69,7 @@ body {font-family: "Open Sans"}
 
     <div class="w3-col l4">
       <div class="w3-white w3-margin">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Flag_of_Miami%2C_Florida.svg" alt="Miami Flag" style="width:100%" class="w3-grayscale">
+        <img src="6543939c3a2fb6d8fed8fef8_65438bd46165a2810bca7159_downtown-miami.webp" alt="Miami Flag" style="width:100%" class="w3-grayscale">
         <div class="w3-container w3-black">
           <h4>Sobre Miami</h4>
           <p>Miami es conocida por su diversidad cultural, música latina, playas icónicas y celebridades que la eligen como su hogar o destino habitual.</p>
