--- a/miami2.html
+++ b/miami2.html
@@ -18,7 +18,7 @@ body {
 }
 
 .header-background {
-  background-image: url('imagenes/miami-header.jpg'); /* Cambia si tu imagen tiene otro nombre */
+  background-image: url('imagenes/miami_sunset_shutterstock_2289145067_wcmjjv.jpg'); /* Cambia si tu imagen tiene otro nombre */
   background-size: cover;
   background-position: center;
   color: white;
