--- a/miami2.html
+++ b/miami2.html
@@ -12,7 +12,7 @@
 h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
 body {
   font-family: "Open Sans";
-  background-color: #f0f0f0;
+  background-color: #ffb162;
   margin: 0;
   padding: 0;
 }
