--- a/miami2.html
+++ b/miami2.html
@@ -18,7 +18,7 @@ body {
 }
 
 .header-background {
-  background-image: url('imagenes/miami_sunset_shutterstock_2289145067_wcmjjv.jpg'); /* Cambia si tu imagen tiene otro nombre */
+  background-image: url('imagenes/miami_sunset_shutterstock_2289145067_wcmjjv.jpg');
   background-size: cover;
   background-position: center;
   color: white;
@@ -32,6 +32,11 @@ body {
 }
 .header-background h6 {
   font-size: 20px;
+}
+
+.seccion-negra {
+  background-color: #000;
+  color: white;
 }
 </style>
 </head>
@@ -58,7 +63,9 @@ body {
 
   <div class="w3-row w3-padding w3-border">
     <div class="w3-col l8 s12">
-      <div class="w3-container w3-white w3-margin w3-padding-large">
+      
+      <!-- Sección Bad Bunny -->
+      <div class="w3-container w3-margin w3-padding-large seccion-negra">
         <div class="w3-center">
           <h3>Bad Bunny en Miami</h3>
           <h5>El ícono del reguetón, <span class="w3-opacity">Junio 2025</span></h5>
@@ -69,7 +76,8 @@ body {
         </div>
       </div>
 
-      <div class="w3-container w3-white w3-margin w3-padding-large">
+      <!-- Sección Miami Beach -->
+      <div class="w3-container w3-margin w3-padding-large seccion-negra">
         <div class="w3-center">
           <h3>Miami Beach</h3>
           <h5>Una de las playas más famosas del mundo, <span class="w3-opacity">Todo el año</span></h5>
@@ -80,7 +88,8 @@ body {
         </div>
       </div>
 
-      <div class="w3-container w3-white w3-margin w3-padding-large">
+      <!-- Sección Messi -->
+      <div class="w3-container w3-margin w3-padding-large seccion-negra">
         <div class="w3-center">
           <h3>Messi en el Inter Miami</h3>
           <h5>Una leyenda del fútbol en Estados Unidos, <span class="w3-opacity">Desde 2023</span></h5>
@@ -90,6 +99,7 @@ body {
           <p><strong>Lionel Messi</strong> revolucionó la MLS al unirse al Inter de Miami. Sus partidos atraen a multitudes y han dado un nuevo impulso al fútbol en la ciudad.</p>
         </div>
       </div>
+
     </div>
 
     <div class="w3-col l4">
