--- a/miami2.html
+++ b/miami2.html
@@ -34,10 +34,12 @@ body {
   font-size: 20px;
 }
 
-.seccion-negra {
-  background-color: #111;
-  color: white;
+.seccion-rosa {
+  background-color: #fbe3e3;
+  color: black;
   border-radius: 12px;
+  padding: 24px;
+  margin-bottom: 32px;
 }
 
 .seccion-contenido {
@@ -85,7 +87,7 @@ body {
     <div class="w3-col l8 s12">
       
       <!-- Sección Bad Bunny -->
-      <div class="w3-container w3-margin w3-padding-large seccion-negra">
+      <div class="w3-container seccion-rosa">
         <h3 class="w3-center">Bad Bunny en Miami</h3>
         <h5 class="w3-center">El ícono del reguetón, <span class="w3-opacity">Junio 2025</span></h5>
         <div class="seccion-contenido">
@@ -95,7 +97,7 @@ body {
       </div>
 
       <!-- Sección Miami Beach -->
-      <div class="w3-container w3-margin w3-padding-large seccion-negra">
+      <div class="w3-container seccion-rosa">
         <h3 class="w3-center">Miami Beach</h3>
         <h5 class="w3-center">Una de las playas más famosas del mundo, <span class="w3-opacity">Todo el año</span></h5>
         <div class="seccion-contenido">
@@ -105,7 +107,7 @@ body {
       </div>
 
       <!-- Sección Messi -->
-      <div class="w3-container w3-margin w3-padding-large seccion-negra">
+      <div class="w3-container seccion-rosa">
         <h3 class="w3-center">Messi en el Inter Miami</h3>
         <h5 class="w3-center">Una leyenda del fútbol en Estados Unidos, <span class="w3-opacity">Desde 2023</span></h5>
         <div class="seccion-contenido">
