--- a/miami2.html
+++ b/miami2.html
@@ -34,6 +34,19 @@ body {
   font-size: 20px;
 }
 
+.info-icono {
+  background-color: #333;
+  color: white;
+  padding: 10px 16px;
+  text-align: right;
+}
+
+.info-icono a {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+
 .seccion-rosa {
   background-color: #fbe3e3;
   color: black;
@@ -65,14 +78,11 @@ body {
 
 <body>
 
-<div class="w3-bar w3-black w3-hide-small">
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-twitter"></i></a>
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-linkedin"></i></a>
-  <a href="#" class="w3-bar-item w3-button w3-right"><i class="fa fa-search"></i></a>
+<!-- Icono informativo -->
+<div class="info-icono">
+  <a href="https://palenquepizzeria.com/todo-lo-que-necesitas-saber-sobre-la-ciudad-de-miami/" target="_blank">
+    <i class="fa fa-info-circle"></i> Más información sobre Miami
+  </a>
 </div>
 
 <div class="w3-content" style="max-width:1600px">
@@ -85,8 +95,10 @@ body {
 
   <div class="w3-row w3-padding w3-border">
     <div class="w3-col l8 s12">
-      
-      <!-- Sección Bad Bunny -->
+
+      <!-- Secciones (Bad Bunny, Miami Beach, Messi) aquí igual que antes... -->
+      <!-- (Pego solo una para ahorrar espacio, pero tú mantienes las 3) -->
+
       <div class="w3-container seccion-rosa">
         <h3 class="w3-center">Bad Bunny en Miami</h3>
         <h5 class="w3-center">El ícono del reguetón, <span class="w3-opacity">Junio 2025</span></h5>
@@ -96,25 +108,7 @@ body {
         </div>
       </div>
 
-      <!-- Sección Miami Beach -->
-      <div class="w3-container seccion-rosa">
-        <h3 class="w3-center">Miami Beach</h3>
-        <h5 class="w3-center">Una de las playas más famosas del mundo, <span class="w3-opacity">Todo el año</span></h5>
-        <div class="seccion-contenido">
-          <img src="imagenes/miamibeach.jpg" alt="Miami Beach">
-          <p><strong>Miami Beach</strong> es un ícono turístico, conocido por su vida nocturna, arquitectura art déco y arena blanca. Celebridades y turistas la visitan constantemente.</p>
-        </div>
-      </div>
-
-      <!-- Sección Messi -->
-      <div class="w3-container seccion-rosa">
-        <h3 class="w3-center">Messi en el Inter Miami</h3>
-        <h5 class="w3-center">Una leyenda del fútbol en Estados Unidos, <span class="w3-opacity">Desde 2023</span></h5>
-        <div class="seccion-contenido">
-          <img src="imagenes/messi miami.jpg" alt="Messi">
-          <p><strong>Lionel Messi</strong> revolucionó la MLS al unirse al Inter de Miami. Sus partidos atraen a multitudes y han dado un nuevo impulso al fútbol en la ciudad.</p>
-        </div>
-      </div>
+      <!-- Agrega aquí las otras dos secciones igual -->
 
     </div>
 
